# mail2list

./: README.md
mail2list_backend/: Cargo.toml  Dockerfile
mail2list_backend/db/: mail_list.sql
mail2list_backend/debian/: config  run.sh
mail2list_backend/mail2list_archive_unsubscribe/: Cargo.toml
mail2list_backend/mail2list_archive_unsubscribe/src/: lib.rs  main.rs
mail2list_backend/mail2list_archive_unsubscribe/src/config/: config.rs  log.rs
mail2list_backend/mail2list_archive_unsubscribe/src/controller/: archive_mail_list_controller.rs  mod.rs  subscribe_mail_list_controller.rs
mail2list_backend/mail2list_archive_unsubscribe/src/dao/: mod.rs
mail2list_backend/mail2list_archive_unsubscribe/src/dto/: archive_mail_list_dto.rs  mod.rs  subscribe_mail_list_dto.rs
mail2list_backend/mail2list_archive_unsubscribe/src/entity/: mod.rs  sys_entitys.rs
mail2list_backend/mail2list_archive_unsubscribe/src/request/: request_model.rs
mail2list_backend/mail2list_archive_unsubscribe/src/service/: archive_mail_list_service.rs  crud_service.rs  mod.rs  subscribe_mail_list_service.rs
mail2list_backend/mail2list_common/: Cargo.toml
mail2list_backend/mail2list_common/src/utils/: mod.rs  receive_mail.rs  search.rs  send_email.rs  string.rs  timeout.rs
mail2list_backend/mail2list_web/: Cargo.toml  application.yml
mail2list_backend/mail2list_web/src/: lib.rs  main.rs
mail2list_backend/mail2list_web/src/config/: config.rs
mail2list_backend/mail2list_web/src/controller/: archive_mail_list_controller.rs  mail_list_controller.rs  mod.rs  subscribe_mail_list_controller.rs
mail2list_backend/mail2list_web/src/dao/: interceptor.rs  mapper.rs  mod.rs
mail2list_backend/mail2list_web/src/dto/: archive_mail_list_dto.rs  mail_list_dto.rs  mod.rs  subscribe_mail_list_dto.rs
mail2list_backend/mail2list_web/src/entity/: mod.rs  sys_entitys.rs
mail2list_backend/mail2list_web/src/request/: mod.rs  request_model.rs
mail2list_backend/mail2list_web/src/routers/: maillist.rs  mod.rs
mail2list_backend/mail2list_web/src/service/: archive_mail_list_service.rs  crud_service.rs  mail_list_service.rs  mod.rs  subscribe_mail_list_service.rs
mail2list_backend/mail2list_web/src/vo/: jwt.rs
mail2list_clap/: Cargo.toml  Dockerfile
mail2list_clap/src/: main.rs
vue-mail2list-web/: .gitignore  Dockerfile  README-zn.md  README.md  default.conf  package-lock.json  package.json  replace_api_url.sh  vue.config.js
vue-mail2list-web/public/: config.json  index.html
vue-mail2list-web/src/: main.js
vue-mail2list-web/src/modules/: variable.js
vue-mail2list-web/src/router/: index.js
vue-mail2list-web/src/store/: index.js
(+14 files in other folders)
