[package]
name = "mail2list_clap"
version = "0.1.0"
edition = "2021"
author = "zhaorunqi<runqi@isrc.iscas.ac.cn>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }

serde_yaml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rbson = "2.0"

log = "0.4"
fast_log="1.3"

# rbatis (required) default is ```all-database```  +  ```runtime-tokio-rustls```
rbatis =  { version = "3.0" }

