[package]
name = "mail2list_archive_unsubscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={version="0.4.8",features = ["multipart"] }
tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
tower-http = { version = "0.2.0", features = ["cors"] }
#serde and json
serde_yaml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"


rbson = "2.0"
rbatis = "3.0"

async-std = "1.10"

#static
lazy_static = "1.4.0"


#http client,use rust-tls replace to native tls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }

#async trait
async-trait = "0.1"
#map
indexmap = "1.7.0"


#futures
futures = "0.3"
mail2list_common = { path = "../mail2list_common" }

casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "cached", "logging"] }

validator = "0.14.0"
validator_derive = "0.14.0"
thread_local = { version = "1.1.3" }
#jwt
jsonwebtoken = "7"

#log
log = "0.4"
fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}

percent-encoding = "2.1.0"

rand = "0.7.3"
imap = "3.0.0-alpha.6"
mailparse = "0.13.8"
lettre = "0.10.0-rc.5"
lettre_email = "0.9"
mime = "0.3.13"
native-tls = "0.2"
regex = "1.5.4"
