[package]
name = "mail2list_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features = ["derive"] }
serde_json = "1.0"
axum ="0.4.4"
tokio = { version="1", features = ["full"] }
md5 = "0.7.0"
rustflake = "0.1.0"

rbatis = { version = "3.0"}
rbson = "2.0.3"

imap = "3.0.0-alpha.6"
mailparse = "0.13.8"
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
native-tls = "0.2"